force-app/main/default/objects/Forecast_Risk_Upside__c/Forecast_Risk_Upside__c.object-meta.xml
<CustomObject>
    <description>Holds risks and upsides for the monthly forecasts</description>
    <label>Forecast Risk/Upside</label>
    <nameField>
        <displayFormat>FR{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Risks/Upsides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>