force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Adh_to_Rev_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Adh_to_Rev_Forecast__c</fullName>
    <formula>IF(Revised_Forecast__c == 0, 0,  Month__r.Total_Units_Rounded__c / Revised_Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adh to Rev Forecast %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>