force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Approved_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Approved_Last_Week__c</fullName>
    <formula>AND(
ISPICKVAL( Approval_Status__c, &quot;Approved&quot;),
DATEVALUE(Approved_Rejected_Date__c) &lt; TODAY() - 5,
DATEVALUE(Approved_Rejected_Date__c) &gt; TODAY() - 11
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Last Week</label>
    <type>Checkbox</type>
</CustomField>