force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <description>Date/Time of Approval or Rejection</description>
    <label>Approved/Rejected Date</label>
    <type>DateTime</type>
</CustomField>