force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Approved_Upsides__c.field-meta.xml
<CustomField>
    <fullName>Approved_Upsides__c</fullName>
    <formula>Month__r.Upsides__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Upsides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>