force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments about risks and upsides</description>
    <label>Risk/Upside Comments</label>
    <type>TextArea</type>
</CustomField>