force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Comments_formula__c.field-meta.xml
<CustomField>
    <fullName>Comments_formula__c</fullName>
    <formula>Comments__c + BR() + &quot;::&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk/Upside Comments</label>
    <type>Text</type>
</CustomField>