force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Month__r.Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>