force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>Month__r.Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>