force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Forecast_Month_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month_Sales_Org__c</fullName>
    <formula>TEXT( Month__r.Sales_Organization__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Month Sales Org</label>
    <type>Text</type>
</CustomField>