force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Is_Zeros_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Zeros_Submitted__c</fullName>
    <formula>IF(AND(Pending_Risks__c = 0, Pending_Upsides__c = 0), 1, 0)</formula>
    <label>Is Zeros Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>