force-app/main/default/objects/Forecast_Risk_Upside__c/fields/LW_Risks_Upsides__c.field-meta.xml
<CustomField>
    <fullName>LW_Risks_Upsides__c</fullName>
    <formula>IF( 
Approved_Last_Week__c, 
Upsides__c - Risks__c, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LW Risks/Upsides</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>