force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>lookup to month object</description>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipName>Risks_Opps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>