force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Pending_Risk_Upside_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pending_Risk_Upside_Comments__c</fullName>
    <formula>IF( ISPICKVAL(Approval_Status__c,&apos;Pending Approval&apos;), Comments__c, &quot;&quot;)</formula>
    <label>Pending Risk/Upside Comments</label>
    <type>Text</type>
</CustomField>