force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Pending_Risks__c.field-meta.xml
<CustomField>
    <fullName>Pending_Risks__c</fullName>
    <formula>IF(ISPICKVAL( Approval_Status__c, &quot;Pending Approval&quot;), 0 - Risks__c, 0)</formula>
    <label>Pending Risks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>