force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Pending_T_Upsides__c.field-meta.xml
<CustomField>
    <fullName>Pending_T_Upsides__c</fullName>
    <formula>Pending_Upsides__c   * Month__r.Average_Weight_per_Unit__c /1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending T Upsides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>