force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Pending_Upsides__c.field-meta.xml
<CustomField>
    <fullName>Pending_Upsides__c</fullName>
    <formula>IF(ISPICKVAL( Approval_Status__c, &quot;Pending Approval&quot;), Upsides__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Upsides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>