force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Revised_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast__c</fullName>
    <formula>Month__r.Forecast__c - Risks__c + Upsides__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>