force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Negative impact to forecast</description>
    <label>Risks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>