force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Risks_Display__c.field-meta.xml
<CustomField>
    <fullName>Risks_Display__c</fullName>
    <formula>TEXT(Risks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risks</label>
    <type>Text</type>
</CustomField>