force-app/main/default/objects/Forecast_Risk_Upside__c/fields/spacer3__c.field-meta.xml
<CustomField>
    <fullName>spacer3__c</fullName>
    <formula>&quot;  &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>__</label>
    <type>Text</type>
</CustomField>