force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Month__r.Total_Units_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>