force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Upsides__c.field-meta.xml
<CustomField>
    <fullName>Upsides__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Positive impact to forecast</description>
    <label>Upsides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>