force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Upsides_Approved_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Upsides_Approved_Last_Week__c</fullName>
    <formula>IF(
Approved_Last_Week__c,
Upsides__c, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LW Upsides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>