force-app/main/default/objects/Forecast_Risk_Upside__c/fields/Upsides_Display__c.field-meta.xml
<CustomField>
    <fullName>Upsides_Display__c</fullName>
    <formula>TEXT(Upsides__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsides</label>
    <type>Text</type>
</CustomField>