force-app/main/default/objects/Forecast_Risk_Upside__c/recordTypes/Approved_Rejected.recordType-meta.xml
<RecordType>
    <fullName>Approved_Rejected</fullName>
    <active>true</active>
    <description>Records that have been approved or rejected</description>
    <label>Approved/Rejected</label>
</RecordType>