force-app/main/default/objects/Forecast_Risk_Upside__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Records that have not yet been approved or rejected</description>
    <label>Standard</label>
</RecordType>