force-app/main/default/objects/Forecast_Risk_Upside__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Comments__c</columns>
    <columns>Risks__c</columns>
    <columns>Upsides__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approved_Risks__c</columns>
    <columns>Approved_Upsides__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>